# btrfs-efi

./: .gitmodules  CMakeLists.txt  README.md  aarch64.cmake  amd64.cmake  clang-aarch64.cmake  clang-amd64.cmake  clang-arm.cmake  clang-x86.cmake
.github/workflows/: build-aarch64.yml  build-amd64.yml  build-mingw-amd64.yml  build-msvc-aarch64.yml  build-msvc-amd64.yml  build-msvc-arm.yml  build-msvc-x86.yml  build-x86.yml
cmake/Modules/: FindEFI.cmake
src/: btrfs.c  crc32c.c  lzo.c  misc.c  misc.cpp  misc.h  quibbleproto.h
src/zstd/: deps.pl
